# twemoji-colr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/twemoji_font_forge/: cache.py  cli.py  github_client.py  nanoemoji_adapter.py  pipeline.py  preview.py  progress.py  templates.py
src/twemoji_font_forge/templates/: nanoemoji.toml.tpl  preview.html.tpl
